refactor: replace Stream.collect(Collectors.toList()) by toList()
related to #88