@@ -65,7 +65,7 @@ public class LdapEnableSortControlSupportTest {
         .list()
         .stream()
         .sorted(Comparator.comparing(User::getFirstName))
-        .collect(Collectors.toList());
+        .toList();
 
     assertThat(orderedUsers).hasSize(manualOrderedUsers.size());
 
@@ -82,7 +82,7 @@ public class LdapEnableSortControlSupportTest {
         .list()
         .stream()
         .sorted(Comparator.comparing(User::getFirstName).reversed())
-        .collect(Collectors.toList());
+        .toList();
 
     assertThat(orderedUsers).hasSize(manualOrderedUsers.size());
 
@@ -102,7 +102,7 @@ public class LdapEnableSortControlSupportTest {
         .list()
         .stream()
         .sorted(Comparator.comparing(User::getLastName))
-        .collect(Collectors.toList());
+        .toList();
 
     assertThat(orderedUsers).hasSize(manualOrderedUsers.size());
 
@@ -119,7 +119,7 @@ public class LdapEnableSortControlSupportTest {
         .list()
         .stream()
         .sorted(Comparator.comparing(User::getLastName).reversed())
-        .collect(Collectors.toList());
+        .toList();
 
     assertThat(orderedUsers).hasSize(manualOrderedUsers.size());
 
@@ -138,7 +138,7 @@ public class LdapEnableSortControlSupportTest {
         .list()
         .stream()
         .sorted(Comparator.comparing(User::getEmail))
-        .collect(Collectors.toList());
+        .toList();
 
     assertThat(orderedUsers).hasSize(manualOrderedUsers.size());
 
@@ -155,7 +155,7 @@ public class LdapEnableSortControlSupportTest {
         .list()
         .stream()
         .sorted(Comparator.comparing(User::getEmail).reversed())
-        .collect(Collectors.toList());
+        .toList();
 
     assertThat(orderedUsers).hasSize(manualOrderedUsers.size());
 
@@ -174,7 +174,7 @@ public class LdapEnableSortControlSupportTest {
         .list()
         .stream()
         .sorted(Comparator.comparing(User::getId))
-        .collect(Collectors.toList());
+        .toList();
 
     assertThat(orderedUsers).hasSize(manualOrderedUsers.size());
 
@@ -191,7 +191,7 @@ public class LdapEnableSortControlSupportTest {
         .list()
         .stream()
         .sorted(Comparator.comparing(User::getId).reversed())
-        .collect(Collectors.toList());
+        .toList();
 
     assertThat(orderedUsers).hasSize(manualOrderedUsers.size());
 
@@ -210,7 +210,7 @@ public class LdapEnableSortControlSupportTest {
         .list()
         .stream()
         .sorted(Comparator.comparing(Group::getId))
-        .collect(Collectors.toList());
+        .toList();
 
     assertThat(orderedGroup).hasSize(manualOrderedGroups.size());
 
@@ -226,7 +226,7 @@ public class LdapEnableSortControlSupportTest {
         .list()
         .stream()
         .sorted(Comparator.comparing(Group::getId).reversed())
-        .collect(Collectors.toList());
+        .toList();
 
     assertThat(orderedGroup).hasSize(manualOrderedGroups.size());
 
@@ -245,7 +245,7 @@ public class LdapEnableSortControlSupportTest {
         .list()
         .stream()
         .sorted(Comparator.comparing(Group::getName))
-        .collect(Collectors.toList());
+        .toList();
 
     assertThat(orderedGroup).hasSize(manualOrderedGroups.size());
 
@@ -261,7 +261,7 @@ public class LdapEnableSortControlSupportTest {
         .list()
         .stream()
         .sorted(Comparator.comparing(Group::getName).reversed())
-        .collect(Collectors.toList());
+        .toList();
 
     assertThat(orderedGroup).hasSize(manualOrderedGroups.size());
 
