@@ -124,10 +124,10 @@ public class FetchAndLockRestServiceInteractionTest extends AbstractRestServiceT
     when(processEngine.getIdentityService()).thenReturn(identityServiceMock);
 
     List<Group> groupMocks = MockProvider.createMockGroups();
-    groupIds = groupMocks.stream().map(Group::getId).collect(Collectors.toList());
+    groupIds = groupMocks.stream().map(Group::getId).toList();
 
     List<Tenant> tenantMocks = Collections.singletonList(MockProvider.createMockTenant());
-    tenantIds = tenantMocks.stream().map(Tenant::getId).collect(Collectors.toList());
+    tenantIds = tenantMocks.stream().map(Tenant::getId).toList();
 
     new FetchAndLockContextListener().contextInitialized(mock(ServletContextEvent.class, RETURNS_DEEP_STUBS));
   }
