@@ -79,7 +79,7 @@ public abstract class AbstractAsyncOperationsTest {
   }
 
   protected List<String> getJobIdsByDeployment(List<Job> jobs, String deploymentId) {
-    return jobs.stream().filter(j -> deploymentId.equals(j.getDeploymentId())).map(Job::getId).collect(Collectors.toList());
+    return jobs.stream().filter(j -> deploymentId.equals(j.getDeploymentId())).map(Job::getId).toList();
   }
 
   protected void completeSeedJobs(Batch batch) {
