@@ -321,7 +321,7 @@ public class MultiTenancyProcessDefinitionSuspensionStateTest {
     // when execute the job to suspend the process definitions
     Job job = engineRule.getManagementService().createJobQuery().timers().singleResult();
     assertThat(job).isNotNull();
-    List<String> expectedDeploymentIds = query.active().list().stream().map(ProcessDefinition::getDeploymentId).collect(Collectors.toList());
+    List<String> expectedDeploymentIds = query.active().list().stream().map(ProcessDefinition::getDeploymentId).toList();
     assertThat(expectedDeploymentIds).contains(job.getDeploymentId());
 
     engineRule.getManagementService().executeJob(job.getId());
@@ -409,7 +409,7 @@ public class MultiTenancyProcessDefinitionSuspensionStateTest {
     // when execute the job to activate the process definitions
     Job job = engineRule.getManagementService().createJobQuery().timers().singleResult();
     assertThat(job).isNotNull();
-    List<String> expectedDeploymentIds = query.suspended().list().stream().map(ProcessDefinition::getDeploymentId).collect(Collectors.toList());
+    List<String> expectedDeploymentIds = query.suspended().list().stream().map(ProcessDefinition::getDeploymentId).toList();
     assertThat(expectedDeploymentIds).contains(job.getDeploymentId());
 
     engineRule.getManagementService().executeJob(job.getId());
