@@ -126,7 +126,7 @@ public class TaskQueryTest extends PluggableProcessEngineTest {
     assertEquals(1, query.count());
     List<Task> foundTasks = query.list();
     assertEquals(1, foundTasks.size());
-    List<String> foundTaskIds = foundTasks.stream().map(Task::getId).collect(Collectors.toList());
+    List<String> foundTaskIds = foundTasks.stream().map(Task::getId).toList();
     assertThat(foundTaskIds).containsOnly(taskId);
   }
 
@@ -138,7 +138,7 @@ public class TaskQueryTest extends PluggableProcessEngineTest {
     assertEquals(2, query.count());
     List<Task> foundTasks = query.list();
     assertEquals(2, foundTasks.size());
-    List<String> foundTaskIds = foundTasks.stream().map(Task::getId).collect(Collectors.toList());
+    List<String> foundTaskIds = foundTasks.stream().map(Task::getId).toList();
     assertThat(foundTaskIds).containsOnly(task0Id, task1Id);
   }
 
