@@ -137,7 +137,7 @@ public class ProcessInstanceAssert extends AbstractProcessAssert<ProcessInstance
     List<String> decendentActivityIds = decendentActivityIdStream.filter(
         // remove the root id from the list
         activityId -> !activityId.equals(activityInstanceTree.getActivityId())
-    ).collect(Collectors.toList());
+    ).toList();
 
     final String message = "Expecting %s " +
       (isWaitingAt ? "to be waiting at " + (exactly ? "exactly " : "") + "%s, ": "NOT to be waiting at %s, ") +
